src/app/app.scss
/* ... */
.grid-tabs-splash .col img {
    max-width: 100%;
    height: 100%;
}

.grid-tabs-splash .row {
    display: table;
    width: 100%;
    padding: 2%;
}

.grid-tabs-splash .col {
    display: table-cell;
    width: 25vw;
}

.grid-tabs-splash p{
    margin-top: 0;
    margin-bottom: 10px;
}

.grid-tabs-splash span{
    margin-bottom: 9px;
}

/* SEARCH */
.block-search{
    position: relative;
}

.btn_search_settings img{
    position: absolute;
    right: 21vw;
    bottom: 2vw;
    height: 92%;
    width: 7.5vw;
}

.searchbar-ios{
    background: #fff;
    border: 1px solid #E0E0E0;
    border-radius: 2vw;
    width: 77vw;
    height: 10vw;
    min-height: inherit;
    padding: 0 2vw;
}

.searchbar-ios.searchbar-left-aligned .searchbar-input {
    padding-left: 8vw;
}

.block-search .label-ios{
    margin: 0 0 3vw 0;
}

.searchbar-ios .searchbar-input{
    height: 7vw;
    padding: 0 10vw;
    font-size: 3.7vw;
}

.searchbar-ios .searchbar-search-icon{
    background-image: url(../assets/img/search.svg);
    background-size: contain;
    width: 4.3vw;
    height: 4.3vw;
    left: 3px;
    top: 1.5vw;
}

.searchbar-ios .searchbar-clear-icon{
    right: 0;
    width: 10vw;
    height: 100%;
    background-size: 8vw;
    background-color: #fff;
    background-position: 100% 50%;
    z-index: 111;
    border-radius: 0;
}

.searchbar-ios .button-clear-ios:hover:not(.disable-hover){
    opacity: 1;
}

/* SEGMENT */
.segment-ios{
    width: 100%;
}

.segment-ios .segment-button{
    border: none;
    color: #828282;
    font-size: 3vw;
    line-height: 10vw;
    height: 10.5vw;
}

.segment-ios .segment-button.segment-activated{
    background: transparent;
    color: #FF5A00;
}

/* SEGMENT NAU */
.nau-segment.segment-ios .segment-button{
    color: #FF8B10;
    border-left: none;
    border-right: none;
    border-top: 1px solid #FF8B10;
    border-bottom: 1px solid #FF8B10;
    font-family: 'OpenSansNauSemibold';
    font-size: 3.7vw;
}

.nau-segment.segment-ios .segment-button.segment-activated{
    background: #FF8B10;
    color: #FFF;
}

.nau-segment.segment-ios .segment-button:first-of-type {
    border-top-left-radius: 100vw;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 100vw;
    border-left: 1px solid #FF8B10;
    border-top: 1px solid #FF8B10;
    border-bottom: 1px solid #FF8B10;
}

.nau-segment.segment-ios .segment-button:last-of-type {
    border-top-left-radius: 0;
    border-top-right-radius: 100vw;
    border-bottom-right-radius: 100vw;
    border-bottom-left-radius: 0;
    border-right: 1px solid #FF8B10;
    border-top: 1px solid #FF8B10;
    border-bottom: 1px solid #FF8B10;
}

/* SEGMENT STATISTIC */
.statistic-segment.segment-ios{
    display: table;
}

.statistic-segment.segment-ios .segment-button{
    display: table-cell;
    color: #828282;
    border-left: none;
    border-right: none;
    border-top: 1px solid #828282;
    border-bottom: 1px solid #828282;
    font-family: 'OpenSansNauSemibold';
    font-size: 3.2vw;
    padding-left: 2vw;
    padding-right: 2vw;
}

.statistic-segment.segment-ios .segment-button.segment-activated{
    background: #828282;
    color: #FFF;
}

.statistic-segment.segment-ios .segment-button:first-of-type {
    border-top-left-radius: 100vw;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 100vw;
    border-left: 1px solid #828282;
    border-top: 1px solid #828282;
    border-bottom: 1px solid #828282;
    width: 21.8vw;
    padding-left: 2vw;
    padding-right: 0;
}

.statistic-segment.segment-ios .segment-button:last-of-type {
    width: 12.4vw;
    border-top-left-radius: 0;
    border-top-right-radius: 100vw;
    border-bottom-right-radius: 100vw;
    border-bottom-left-radius: 0;
    border-right: 1px solid #828282;
    border-top: 1px solid #828282;
    border-bottom: 1px solid #828282;
    background: url(../assets/img/user_offers/icon_right.svg) no-repeat 50% 50%/auto 65%;
}

.statistic-segment.segment-ios .segment-button.segment-activated:last-of-type {
    border-top-left-radius: 0;
    border-top-right-radius: 100vw;
    border-bottom-right-radius: 100vw;
    border-bottom-left-radius: 0;
    border-right: 1px solid #828282;
    border-top: 1px solid #828282;
    border-bottom: 1px solid #828282;
    background: #828282 url(../assets/img/statistic/icon_right_active.svg) no-repeat 50% 50%/auto 65%;
}

.wrap{
    white-space: normal;
}

.wrap-no{
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.italic{
    font-style: italic;
}

/* RADIO MD */
.radio-nau .radio {
    padding: 0 4vw;
}

.item-radio.item-ios ion-label {
    margin-left: 5vw;
}

.radio-nau .item {
    margin-bottom: 3vw;
}

.radio-nau .radio-icon{
    width: 6vw;
    height: 6vw;
    border: 1px solid #E0E0E0;
    border-radius: 100vw;
    display: table;
    padding: 1vw;
}

.radio-nau .radio-inner {
    position: static;
    display: table-cell;
    background: linear-gradient(89.37deg, #FF5A00 0.65%, #FF8B10 99.57%);
    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.12);
}

.radio-nau .item-radio-checked ion-label{
    color: inherit;
}

.radio-nau.radio-nau-no-margin .label{
    margin-top: 0;
    margin-bottom: 0;
    margin-right: 0;
    margin-left: 5vw;
}

/* PROGRESS BLOCK PAGE CREATE OFFER */

.progress-block {
    width: 100%;
    display: flex;
    display: -webkit-flex;
    justify-content: space-between;
    -webkit-justify-content: space-between;
    padding-top: 2px;
    padding-bottom: 2px;
    position: relative;
}

.progress-block .circle{
    width: 5vw;
    height: 5vw;
    border: 2px solid #F2F2F2;
    border-radius: 5vw;
    z-index: 2;
    background: #F2F2F2;
}

.progress-block .fill-first{
    background: #FF5A00;
}

.progress-block .fill-last{
    background: #FF8B10;
}
/* ... */

